fixing image alignment

--- a/site_media/css/main.css
+++ b/site_media/css/main.css
@@ -645,7 +645,7 @@ border-radius: 10px;
 
 div.cases
 {
-	margin: 1em 0;
+	margin: 0 0 1em;
 	padding: 0;
 	border: 1px solid #999;
 	width: 350px;
